# primitive

./: .gitignore  CMakeLists.txt
cmake/Modules/: FindLibconfig++.cmake  FindMariaDB.cmake  FindMySQL.cmake  FindP7.cmake  FindSpdlog.cmake
etc/: config.conf  config.conf.example
impl/: CMakeLists.txt  main.cpp
impl/status/: ClientPart.cpp  ClientPart.hpp  Service.cpp  Service.hpp
lib/: CMakeLists.txt
lib/p7/: CMakeLists.txt
lib/p7/Examples/C/: C_Example.c
lib/p7/Examples/Cpp/: Main.cpp
lib/p7/Headers/: P7_Cproxy.h  P7_Extensions.h  P7_Trace.h
lib/p7/Sources/: ClBaical.cpp  ClBaical.h  ClFile.cpp  ClText.cpp  ClText.h  ClTextConsole.h  ClTextFile.h  Formatter.h  Proxy.cpp  Socket.h  TPackets.h  Telemetry.cpp  Trace.cpp  Trace.h
lib/p7/Tests/Trace/: Main.cpp
src/: CMakeLists.txt
src/actions/: ActionsFactory.cpp  ActionsFactory.hpp  RequestBase.cpp  RequestBase.hpp
src/actions/requests/: Ping.cpp  Ping.hpp
src/compression/: Compressor.hpp  CompressorFactory.cpp  CompressorFactory.hpp  GzipCompressor.cpp  GzipCompressor.hpp
src/configs/: Config.cpp  Config.hpp  Configs.cpp  Configs.hpp  Options.cpp  Options.hpp  Setting.hpp
src/extra/: Admin.cpp  Admin.hpp  Application.cpp  Application.hpp  ApplicationFactory.cpp  ApplicationFactory.hpp  Applications.cpp  Applications.hpp
src/log/: Log.cpp  Log.hpp  LogHolder.cpp  LogHolder.hpp  LoggerManager.cpp  LoggerManager.hpp  Sink.cpp  Sink.hpp
src/mechanics/counters/: Counter.cpp  Counter.hpp  CounterConfig.cpp  CounterConfig.hpp  CounterContainer.cpp  CounterContainer.hpp  CounterManager.cpp  CounterManager.hpp
src/mechanics/generators/: Generator.cpp  Generator.hpp  GeneratorConfig.cpp  GeneratorConfig.hpp  GeneratorContainer.cpp  GeneratorContainer.hpp  GeneratorManager.cpp  GeneratorManager.hpp
src/mechanics/limits/: Limit.cpp  Limit.hpp  LimitConfig.cpp  LimitConfig.hpp  LimitContainer.cpp  LimitContainer.hpp  LimitManager.cpp  LimitManager.hpp
src/net/: Acceptor.cpp  Acceptor.hpp  AcceptorFactory.cpp  AcceptorFactory.hpp  Connection.cpp  Connection.hpp  ConnectionAcceptor.cpp  ConnectionAcceptor.hpp  ConnectionBase.cpp  ConnectionBase.hpp  ConnectionEvent.hpp  ConnectionManager.cpp  ConnectionManager.hpp  Connector.cpp  Connector.hpp  HostnameResolver.cpp  HostnameResolver.hpp  OutputConnectionStream.hpp  ReaderConnection.hpp  SslAcceptor.cpp  SslAcceptor.hpp  SslConnection.cpp  SslConnection.hpp  SslConnector.cpp  SslConnector.hpp  TcpAcceptor.cpp  TcpAcceptor.hpp  TcpConnection.cpp  TcpConnection.hpp  TcpConnector.cpp  TcpConnector.hpp  TimeoutWatcher.cpp  TimeoutWatcher.hpp  WriterConnection.hpp
src/options/: Options.cpp  Options.hpp
src/serialization/: JsonSerializer.cpp  JsonSerializer.hpp  ProtobufSerializer.cpp  ProtobufSerializer.hpp  SArr.hpp  SBase.hpp  SBinary.hpp  SBool.hpp  SFloat.hpp  SInt.hpp  SNull.hpp  SNum.hpp  SObj.hpp  SStr.hpp  SVal.cpp  SVal.hpp  Serializer.hpp  SerializerFactory.cpp  SerializerFactory.hpp  TlvSerializer.cpp  TlvSerializer.hpp  UrlSerializer.cpp  UrlSerializer.hpp
src/serialization/amf3/: Amf3Context.cpp  Amf3Context.hpp  Amf3Exeption.cpp  Amf3Exeption.hpp  Amf3Serializer.cpp  Amf3Serializer.hpp  Amf3Traits.cpp  Amf3Traits.hpp
src/serialization/json/: JSON.cpp  JSON.hpp
src/server/: Server.cpp  Server.hpp
src/services/: Action.cpp  Action.hpp  ActionFactory.cpp  ActionFactory.hpp  Event.cpp  Event.hpp  EventFactory.cpp  EventFactory.hpp  Service.cpp  Service.hpp  ServiceFactory.cpp  ServiceFactory.hpp  ServicePart.cpp  ServicePart.hpp  Services.cpp  Services.hpp
src/services/status/: Service.cpp  Service.hpp
src/sessions/: Communicate.cpp  Communicate.hpp  Session.cpp  Session.hpp  SessionManager.cpp  SessionManager.hpp
src/storage/: Db.cpp  Db.hpp  DbConnection.cpp  DbConnection.hpp  DbConnectionPool.cpp  DbConnectionPool.hpp  DbConnectionPoolFactory.cpp  DbConnectionPoolFactory.hpp  DbHolder.cpp  DbHolder.hpp  DbManager.cpp  DbManager.hpp  DbResult.cpp  DbResult.hpp  DbRow.hpp
src/storage/mysql/: MysqlAsyncConnection.cpp  MysqlAsyncConnection.hpp  MysqlConnection.cpp  MysqlConnection.hpp  MysqlConnectionPool.cpp  MysqlConnectionPool.hpp  MysqlLibHelper.cpp  MysqlLibHelper.hpp  MysqlResult.cpp  MysqlResult.hpp  MysqlRow.hpp
src/telemetry/: Metric.cpp  Metric.hpp  SysInfo.cpp  SysInfo.hpp  TelemetryManager.cpp  TelemetryManager.hpp
src/thread/: Coroutine.cpp  Coroutine.hpp  RollbackStackAndRestoreContext.hpp  STask.cpp  STask.hpp  Task.cpp  Task.hpp  TaskManager.cpp  TaskManager.hpp  Thread.cpp  Thread.hpp  ThreadPool.cpp  ThreadPool.hpp
src/transport/: ClientTransport.cpp  ClientTransport.hpp  HttpClient.cpp  HttpClient.hpp  HttpRequestExecutor.cpp  HttpRequestExecutor.hpp  HttpServer.cpp  HttpServer.hpp  HttpTransport.cpp  HttpTransport.hpp  LpsContext.cpp  LpsContext.hpp  PacketServer.cpp  PacketServer.hpp  PacketTransport.cpp  PacketTransport.hpp  Request.cpp  Request.hpp  ServerTransport.cpp  ServerTransport.hpp  Transport.cpp  Transport.hpp  TransportContext.cpp  TransportContext.hpp  TransportFactory.cpp  TransportFactory.hpp  Transports.cpp  Transports.hpp  URI.cpp  URI.hpp  WebsocketClient.cpp  WebsocketClient.hpp  WebsocketCommunicator.cpp  WebsocketCommunicator.hpp  WebsocketPipe.cpp  WebsocketPipe.hpp  WebsocketServer.cpp  WebsocketServer.hpp  WsTransport.cpp  WsTransport.hpp
src/transport/http/: HttpClient.cpp  HttpClient.hpp  HttpContext.cpp  HttpContext.hpp  HttpHeader.cpp  HttpHeader.hpp  HttpHelper.cpp  HttpHelper.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpRequestExecutor.cpp  (+7 more)
src/utils/: Base32.cpp  Base32.hpp  Base64.cpp  Base64.hpp  Buffer.cpp  Buffer.hpp  Context.hpp  Daemon.cpp  Daemon.hpp  DoAtExitScope.hpp  Dummy.hpp  Html.cpp  Html.hpp  MD5.cpp  MD5.hpp  Named.hpp  NopeException.hpp  Number.hpp  OTP.cpp  OTP.hpp  Packet.hpp  PercentEncoding.cpp  PercentEncoding.hpp  Random.cpp  Random.hpp  Reader.hpp  SHA1.cpp  SHA1.hpp  SHA256.cpp  Saveable.hpp  Shareable.hpp  ShutdownManager.cpp  ShutdownManager.hpp  SslHelper.cpp  SslHelper.hpp  String.cpp  String.hpp  Time.cpp  Time.hpp  Timeout.cpp  (+7 more)
test/: main.cpp
(+34 files in other folders)
